--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "astro": "^5.14.1",
     "sharp": "^0.34.3",
     "tailwindcss": "^4.1.14"
+  },
+  "devDependencies": {
+    "prettier": "^3.6.2",
+    "prettier-plugin-astro": "^0.14.1",
+    "typescript": "^5.9.3"
   }
 }
