--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/sitemap": "^3.6.0",
     "@tailwindcss/vite": "^4.1.14",
     "astro": "^5.14.1",
+    "astro-og-canvas": "^0.7.0",
     "sharp": "^0.34.3",
     "tailwindcss": "^4.1.14"
   },
